# dggame

./: .gitignore  CMakeLists.txt  README.md
src/game/: assets.cpp  assets.h  game.cpp  game.h  scene_manager.h  ui_manager.cpp  ui_manager.h
src/scene/: scene.cpp  scene.h  title_scene.cpp  title_scene.h
src/ui/control/: button.cpp  button.h  control.h  text.cpp  text.h
